Unnamed categories and functions

--- a/main/templates/main/account.html
+++ b/main/templates/main/account.html
@@ -12,11 +12,11 @@
                 <div class='video-grid'>
                     <div class='video-item'>
                         <div class='thumbnail'>
-                            <a class='thumbnail' href='{% url 'watch' %}'>
+                            <a class='thumbnail' href='{% url 'watch2' %}'>
                                 <img src='{% static 'main/thumbnail.png' %}'>
                             </a>
                         </div>
-                        <a href='{% url 'watch' %}'>My Video 1</a>
+                        <a href='{% url 'watch2' %}'>My Video 1</a>
                     </div>
                 </div>
             </div>
