--- a/main/templates/main/login.html
+++ b/main/templates/main/login.html
@@ -1,6 +1,7 @@
 {% extends 'main/layout.html' %}
 
 {% block content %}
+this file is no longer needed
 <h3>Sign In</h3>
 {% if message %}
     <div>
