--- a/main/templates/main/watch.html
+++ b/main/templates/main/watch.html
@@ -15,6 +15,7 @@
 
     <div id="label-container">
         <p>Title: {{ video.title }}</p>
+        <p>Uploaded by: {{ video.uploader }}</p>
     </div>
 
     <div id="upnext">
