--- a/main/templates/registration/login.html
+++ b/main/templates/registration/login.html
@@ -14,4 +14,7 @@
      <input name='password' type='password'/>
      <input type='submit' value='Sign In'/>
  </form>
+
+ Don't have an account?
+ <a href='{% url 'signup' %}'>Create an account</a>
  {% endblock %}
