--- a/main/templates/main/watch.html
+++ b/main/templates/main/watch.html
@@ -19,7 +19,7 @@
         <button style='display:block'>Save this video</button>
         <video width="320" height="240" controls>
             <source src={% static 'main/mov_bbb.mp4' %} type="video/mp4">
-            Your browser does not support the video tag.
+            Your browser does not support this video.
         </video>
         <div id="video-actions">
             <button>Submit my video</button>
