--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -27,6 +27,7 @@
 
             #filter-container {
                 padding: 20px;
+                height: 500px;
             }
 
             #industry-container {
