--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -7,7 +7,8 @@
         <style>
             .header {
                 padding: 20px;
-                border-bottom: 1px solid #e8e8e8;
+                width: 100%;
+                display: inline-block;
             }
 
             #logo {
@@ -16,11 +17,16 @@
             }
 
             .header-user{
-                float: right;
+                float: left;
+                width: 75%;
             }
 
             #filter-bar {
                 padding: 20px;
+            }
+
+            .search-functions a {
+                margin: 0px 10px;
             }
 
             #filter-container {
@@ -28,22 +34,7 @@
                 height: 500px;
             }
 
-            #industry-container {
-                float: left;
-                width: 20%;
-            }
-
-            #func-container {
-                float: left;
-                width: 20%;
-            }
-
-            #experience-container {
-                float: left;
-                width: 20%;
-            }
-
-            #jobtype-container {
+            #filter-container div {
                 float: left;
                 width: 20%;
             }
