--- a/main/templates/main/upload_a.html
+++ b/main/templates/main/upload_a.html
@@ -13,13 +13,10 @@
                 {{ form.file }}
             </div>
             <div style='float:left;width:40%'>
-                Title {{ form.title }}<br>
-                Position Type {{ form.jobtypes }}<br>
-                Position Location City {{ form.city }}<br>
-                Position Location State {{ form.state }}<br>
-                Remote Work Only {{ form.remote }}<br>
-                Role {{ form.role }}<br>
-                Desired Background / Experience {{ form.categories }}<br>
+                Background / Experience {{ form.categories }}<br><br>
+                <b>Preferences</b><br>
+                Job Type {{ form.jobtypes }}<br>
+                Tribal Interests {{ form.tribals }}<br>
             </div>
             <button type='submit'>Upload</button>
         </form>
