--- a/main/templates/registration/signup.html
+++ b/main/templates/registration/signup.html
@@ -1,16 +1,9 @@
 {% extends 'main/layout.html' %}
 
 {% block content %}
-<h3>Sign Up</h3>
-{% if message %}
-    <div>
-        {{ message }}
-    </div>
-{% endif %}
-
- <form action='' method='post' enctype='multipart/form-data'>
-     {% csrf_token %}
-     {% include 'main/form_template.html' %}
-     <button type='submit'>Sign Up</button>
- </form>
+<div style='padding: 20px'>
+    <h3>Sign Up</h3>
+    <a href='{% url 'js_signup' %}'>I'm a job seeker</a>
+    <a href='{% url 'emp_signup' %}'>I'm an employer</a>
+</div>
 {% endblock %}
