--- a/main/templates/main/upload_emp.html
+++ b/main/templates/main/upload_emp.html
@@ -13,10 +13,14 @@
                 {{ form.file }}
             </div>
             <div style='float:left;width:40%'>
-                Background / Experience {{ form.categories }}<br><br>
-                <b>Preferences</b><br>
-                Job Type {{ form.jobtypes }}<br>
-                Tribal Interests {{ form.tribals }}<br>
+                Title {{ form.title }}<br>
+                Tribal Association(s) {{ form.tribals }}<br>
+                Position Type {{ form.jobtypes }}<br>
+                Position Location City {{ form.city }}<br>
+                Position Location State {{ form.state }}<br>
+                Remote Work Only {{ form.remote }}<br>
+                Role {{ form.role }}<br>
+                Desired Background / Experience {{ form.categories }}<br>
             </div>
             <button type='submit'>Upload</button>
         </form>
