--- a/main/templates/main/layout.html
+++ b/main/templates/main/layout.html
@@ -32,11 +32,12 @@
             #filter-container {
                 padding: 20px;
                 height: 500px;
+                font-size: 12px;
             }
 
             #filter-container div {
                 float: left;
-                width: 20%;
+                width: 15%;
             }
 
             .filter-button {
