--- a/main/templates/main/watch.html
+++ b/main/templates/main/watch.html
@@ -13,21 +13,21 @@
         });
     });
 
-    function submit_video(){
+    function submit_my_video(){
         container = document.getElementById('submit-container');
         container.innerHTML += 'Select a video you want to submit:<br>';
-        //
-        // var xhttp = new XMLHttpRequest();
-        // xhttp.onreadystatechange = function() {
-        //     if (this.readyState == 4 && this.status == 200) {
-        //         container.innerHTML += this.responseText;
-        //     }
-        // };
-        // xhttp.open('GET', '{% static 'main/testajax.php' %}', true);
-        // xhttp.send();
-        $.get('/submit_video', function(data){
+        $.get('/submit_my_video', function(data){
             container.innerHTML += data;
         });
+    }
+
+    function submit_video(evt){
+        $.post('/submit_video', {video: evt.target.dataset.id, submit_to: {{ video.pk }}, csrfmiddlewaretoken: '{{ csrf_token }}'});
+
+        container = document.getElementById('submit-container');
+
+        // Video name
+        container.innerHTML = 'Your video has been successfully submitted!';
     }
 </script>
 {% endblock %}
@@ -53,7 +53,7 @@
             Your browser does not support this video.
         </video>
         <div id="video-actions">
-            <button onclick='submit_video()'>Submit my video</button>
+            <button onclick='submit_my_video()'>Submit my video</button>
             {% if upnext %}
                 <a href='{% url 'watch' upnext.0.id %}'>Skip / Next</a>
             {% endif %}
