employer tribal association prepopulated in upload form

--- a/main/templates/main/upload_emp.html
+++ b/main/templates/main/upload_emp.html
@@ -19,7 +19,10 @@
                 Position Location City {{ form.city }}<br>
                 Position Location State {{ form.state }}<br>
                 Remote Work Only {{ form.remote }}<br>
-                Role {{ form.role }}<br>
+
+                Technical or MBA/Management-type Role {{ form.role }}<br>
+                Desired Total Professional Experience Level {{ form.experiences }}<br>
+
                 Desired Background / Experience {{ form.categories }}<br>
             </div>
             <button type='submit'>Upload</button>
