--- a/main/templates/main/browse.html
+++ b/main/templates/main/browse.html
@@ -166,6 +166,10 @@
 
 {% block content %}
     <div class='search-functions'>
+        <!-- search not index -->
+        <form action='{% url 'index' %}' method="get">
+            <input type="submit" value='1' name='role' id='tech-btn'/>
+        </form>
         <a>TECH TALENT</a>
         <a>MBAs / MANAGEMENT</a>
         <form id='title-search' action="{% url 'search' %}" class="search" method="get" style='display:inline'>
