--- a/main/templates/main/watch.html
+++ b/main/templates/main/watch.html
@@ -46,12 +46,20 @@
 {% endblock %}
 
 {% block content %}
+    <p>Title: {{ video.title }}</p>
     <div id="video">
         <img id='save' src='{% static 'main/empty_heart.png' %}' width='30px' style='display:block;float:right'>
         <video width="320" height="240" controls>
             <source src='{% static 'main/mov_bbb.mp4' %}' type="video/mp4">
             Your browser does not support this video.
         </video>
+        <p>Uploaded by: {{ video.uploader }}</p>
+        {% for tribal in video.tribals.all %}
+            {{ tribal }} |
+        {% endfor %}
+    </div>
+
+    <div id="label-container">
         <div id="video-actions">
             <button onclick='submit_my_video()'>Submit my video</button>
             {% if upnext %}
@@ -61,11 +69,6 @@
         <hr>
         <div id='submit-container'>
         </div>
-    </div>
-
-    <div id="label-container">
-        <p>Title: {{ video.title }}</p>
-        <p>Uploaded by: {{ video.uploader }}</p>
     </div>
 
     <div id="upnext">
